# bazel-june-2026

./: README.md
day1/: README.md
day1/bazel-lab1/: MODULE.bazel
day1/bazel-lab1/sources/: BUILD  hello.cpp  main.cpp
day1/cpp-multitarget-bazel/: MODULE.bazel
day1/cpp-multitarget-bazel/app/: BUILD
day1/cpp-multitarget-bazel/lib/: BUILD  hello.cpp
day1/cpp-with-bazel/: MODULE.bazel
day1/cpp-with-bazel/src/: BUILD
day1/cpp-with-cmake/: CMakeLists.txt
day1/cpp-with-cmake/src/: main.cpp
day1/cpp-with-make/: Makefile
day1/cpp-with-make/src/: hello.cpp  hello.h  main.cpp
day1/csharp-with-bazel/: BUILD.bazel  MODULE.bazel  hello.cs
day1/java-with-bazel/: BUILD.bazel  MODULE.bazel
day1/java-with-bazel/src/main/java/org/tektutor/: Hello.java
day1/java-with-bazel/src/test/java/org/tektutor/: HelloTest.java
day1/python-with-bazel/: BUILD.bazel  MODULE.bazel  app.py  lib.py  test_lib.py
day2/: README.md
day2/bazel-aspect/: list_sources.bzl
day2/bazel-aspect/app/: greet.cpp  greet.h  main.cpp
day2/bazel-aspect/lib/: hello.h
day2/bazel-macro-with-starlark/: MODULE.bazel
day2/bazel-macro-with-starlark/src/: BUILD  hello.cpp  hello.h  main.cpp
day2/bazel-macro-with-starlark/tools/: rules.bzl
day2/cpp-bazel-with-gtest/: MODULE.bazel
day2/cpp-bazel-with-gtest/app/: BUILD
day2/cpp-bazel-with-gtest/lib/: BUILD
day2/cpp-bazel-with-gtest/test/: BUILD  hello_test.cpp
day2/cpp-bazel-with-include-all-cpp-files/: .bazelrc  MODULE.bazel
day2/cpp-bazel-with-include-all-cpp-files/app/: BUILD  hello.cpp  main.cpp
day2/custom-bazel-rule/: BUILD  MODULE.bazel  bazel-bin  bazel-custom-bazel-rule  bazel-out  bazel-testlogs  defs.bzl  main.cpp
day2/custom-bazel-rule/tools/: BUILD  generate-code.py
day2/yet-another-custom-bazel-rule/: BUILD  MODULE.bazel  config.txt.tpl  defs.bzl
day3/: README.md
day3/bazel-caching/: MODULE.bazel  bazel-bazel-caching  bazel-bin  bazel-out  bazel-testlogs  commands.txt
day3/bazel-caching/src/: hello.cpp  hello.h  hello_linux_arm.cpp  hello_linux_x86.cpp  main.cpp
day3/bazel-caching/toolchain/: BUILD
day3/bazel-monorepo-example/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  bazel-bazel-monorepo-example  bazel-bin  bazel-out  bazel-testlogs
day3/bazel-monorepo-example/app/cli/: BUILD  main.cc  version.h
day3/bazel-monorepo-example/lib/core/: BUILD  logger.cc  logger.h  logger_test.cc  result.h
day3/bazel-monorepo-example/lib/crypto/: BUILD  crypto.cc  crypto.h  crypto_test.cc
day3/bazel-monorepo-example/lib/net/: BUILD  http.cc  http.h  http_test.cc
day3/bazel-monorepo-example/proto/: BUILD  user.proto
day3/bazel-monorepo-example/services/auth/: BUILD  auth_service.cc  auth_service.h  auth_service_test.cc
day3/bazel-monorepo-example/services/gateway/: BUILD  gateway.cc  gateway.h  gateway_test.cc
day3/bazel-monorepo-example/tools/: workspace_status.sh
day3/bazel-monorepo-example/tools/aspects/: lint.bzl  metadata.bzl
day3/bazel-monorepo-example/tools/rules/: cc_rules.bzl  macros.bzl
day3/bazel-tag/: MODULE.bazel  bazel-bin  bazel-lab10-tags  bazel-out  bazel-testlogs
day3/bazel-tag/src/: BUILD  hello.cpp  hello.h  hello_integration_test.cpp  hello_slow_test.cpp  hello_unit_test.cpp
day3/code-coverage/: .bazelrc  bazel-bin  bazel-lab9  bazel-out  bazel-testlogs
day3/code-coverage/src/: BUILD  hello_bare_metal.cpp  hello_test.cpp
day3/code-coverage/toolchain/: toolchain_config.bzl
day3/code-coverage/tools/: aspects.bzl  rules.bzl
day3/cross-compilation/: BUILD.bazel  MODULE.bazel  hello.cpp
day3/cross-compilation/toolchain/: BUILD.bazel  cc_toolchain_config.bzl
day3/custom-test-rule/: MODULE.bazel
day3/custom-test-rule/kvstore/: BUILD.bazel  reverse_test.cc  strutil.cc  strutil.h  strutil_test.cc  uppercase_client_test.cpp
day3/custom-test-rule/testing/: BUILD.bazel  integration_test.bzl  server_fixture.cpp
