load( "@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test" )

java_library (
   name = "hello_lib",
   srcs = ["src/main/java/org/tektutor/Hello.java"],
)

java_binary (
    name = "hello_world",
    main_class = "org.tektutor.Hello",
    runtime_deps = [":hello_lib"],
)

java_test (
	name = "HelloTest",
	srcs = ["src/test/java/org/tektutor/HelloTest.java"],
	test_class = "org.tektutor.HelloTest",
	deps = [
		":hello_lib",
		"@maven//:junit_junit",
	],
)

