module(
    name    = "hello_platforms",
    version = "1.0",
)

bazel_dep(name = "rules_cc",  version = "0.2.17")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

cc_configure = use_extension(
    "@rules_cc//cc:extensions.bzl",
    "cc_configure_extension",
)
use_repo(cc_configure, "local_config_cc")

register_toolchains(
    "//toolchain:my_gcc_toolchain_x86",
    "//toolchain:my_gcc_toolchain_x86_legacy",
    "//toolchain:my_gcc_toolchain_aarch64",
    "//toolchain:my_gcc_toolchain_aarch64_legacy",
)
