module(
    name    = "monorepo",
    version = "1.0.0",
)

# Versions match exactly what Bazel 9.1.0 resolves to (from bazel/9.1.0/MODULE.bazel).
bazel_dep(name = "rules_cc",     version = "0.2.17")
bazel_dep(name = "rules_proto",  version = "7.1.0")
bazel_dep(name = "protobuf",     version = "33.4",         repo_name = "com_google_protobuf")

# Must be 1.17.0.bcr.2 — plain 1.17.0 is missing load() statements in its BUILD.bazel.
# The .bcr.2 suffix = BCR-patched version that adds the missing loads for Bazel 9.
bazel_dep(name = "googletest",   version = "1.17.0.bcr.2", repo_name = "com_google_googletest")

bazel_dep(name = "abseil-cpp",   version = "20250814.1",   repo_name = "com_google_absl")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
