load("@rules_cc//cc:defs.bzl","cc_toolchain")
load(":cc_toolchain_config.bzl", "cc_toolchain_config")

cc_toolchain_config(name = "aarch64_config")

filegroup(name = "empty")

cc_toolchain(
	name = "aarch64_cc_toolchain_impl",
	toolchain_config = ":aarch64_config",
	all_files = ":emtpy",
	compiler_files = ":empty",
	dwp_files = ":empty",
	linker_files = ":empty",
	objcopy_files = ":empty",
	strip_files = ":empty",
	supports_param_files = 0,
)

toolchain(
   name = "aarch64_cc_toolchain",
   target_compatible_with = [
	"@platforms//cpu:aarch64",
	"@platforms//os:linux",
   ],
   toolchain = ":aarch64_cc_toolchain_impl",
   toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
