load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//testing:integration_test.bzl", "integration_test")

cc_library(
    name = "strutil",
    srcs = ["strutil.cc"],
    hdrs = ["strutil.h"],
)

cc_test(
    name = "strutil_test",
    srcs = ["strutil_test.cc"],
    deps = [":strutil"],
    size = "small",
    tags = ["unit"],
)

cc_test(
    name = "reverse_test",
    srcs = ["reverse_test.cc"],
    deps = [":strutil"],
    size = "small",
    tags = ["unit"],
)

integration_test(
    name = "uppercase_client_test",
    srcs = ["uppercase_client_test.cpp"],
    size = "small",
)
